--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,7 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+	h1= title
+	each post in posts
+		a(href=posts.postName)
+		!= posts.contents
