split method used on index.js so that titles of posts are shown

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,6 @@ block content
 	h1= title
 	each post in posts
 		h2
-			a(href=post.postName) posts.contents
-		p
-			!= post.contents
+			a(href=post.postName)
+				!= post.postTitle
 
